# OS_lab3

./: notes.txt
exercise_1/: CMakeLists.txt  notes.txt
exercise_1/include/: threads.h
exercise_1/incude/: threads.h
exercise_1/src/: main.c  threads.c
exercise_2/: CMakeLists.txt  notes.txt
exercise_2/include/: tangents.h
exercise_2/incude/: tangent.h
exercise_2/src/: main.c  tangent.c  tangents.c
exercise_3/: CMakeLists.txt  notes.txt
exercise_3/include/: square_root.h  threads.h
exercise_3/src/: main.c  square_root.c  threads.c
exercise_4/: notes.txt
exercise_4/incude/: threads.h
exercise_4/src/: threads.c
exercise_5/: notes.txt
